2005-05-09 Braden McDaniel  <braden@endoframe.com>

	* openvrml.pc.in:  Added Boost libraries.

2005-05-09 Braden McDaniel  <braden@endoframe.com>

	* openvrml.pc.in:  Removed obsolete Z_LIBS configure
	substitution.

2005-05-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am:  Link with libboost_regex.
	* src/libopenvrml/openvrml/browser.cpp:  Replaced Spirit URI
	parser with boost::regex.  Alas, Spirit parsers are not thread-
	safe.  (More accurately, certain Spirit constructs are not
	thread-safe, including ones OpenVRML was using.)

2005-05-09 Braden McDaniel  <braden@endoframe.com>

	Protect openvrml::scene::url_ with a separate mutex.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h

2005-04-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp (create_file_url):
	Throw an exception if realpath/_fullpath does not succeed.

2005-04-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::scene::get_resource):  Fixed test to check whether
	create_file_url should be called.

2005-04-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  When loading the root
	scene, set browser::world_url as soon as we have a usable
	stream.

2005-04-21 Braden McDaniel  <braden@endoframe.com>

	Changed convention for scoping definitions.  Definitions are now
	explicitly qualified in the global scope rather than enclosed in
	namespace scope blocks.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/exposedfield.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/frustum.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node_ptr.cpp
	* src/libopenvrml/openvrml/rendering_context.cpp
	* src/libopenvrml/openvrml/scope.cpp